tests/compilation_tests/05_fail_missing_into.stderr
error[E0277]: the trait bound `i64: From<MyStruct>` is not satisfied
  --> tests/compilation_tests/05_fail_missing_into.rs:25:5
   |
25 |     tensor_type!(MyTensorStruct, [my_struct1], Params, tch::Kind::Float);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<MyStruct>` is not implemented for `i64`
   |
   = help: the following other types implement trait `From<T>`:
             <i64 as From<bool>>
             <i64 as From<i8>>
             <i64 as From<i16>>
             <i64 as From<i32>>
             <i64 as From<u8>>
             <i64 as From<u16>>
             <i64 as From<u32>>
             <i64 as From<Scalar>>
           and $N others
   = note: required for `MyStruct` to implement `Into<i64>`
   = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)
